함수 수정 그러나 뭔가 잘못된

--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -6,7 +6,7 @@
         <style>
             h1
             {
-                font-size: 100px;
+                font-size: 40px;
                 background: linear-gradient(to right, #cc00ff, #00ffaa);
                 -webkit-background-clip: text;
                 color: transparent;
@@ -29,23 +29,23 @@
     <body>
         <script src="tictactoe.js"></script>
         <div style="text-align : center;">
-            <h1 id="title">☆♡♧♬ 쥰내 재밌는 틱택토 ☆♡♧♬</h1>
+            <h1 id="title">☆♡♧♬ 재밌는 틱택토 ☆♡♧♬</h1>
         </div>
         <table>
             <tr>
-                <td id="map[0]" onClick="ClickEvent0()"></td>
-                <td id="map[1]" onClick="ClickEvent1()"></td>
-                <td id="map[2]" onClick="ClickEvent2()"></td>
+                <td id="map[0]" onClick="ClickEvent(0)"></td>
+                <td id="map[1]" onClick="ClickEvent(1)"></td>
+                <td id="map[2]" onClick="ClickEvent(2)"></td>
             </tr>
             <tr>
-                <td id="map[3]" onClick="ClickEvent3()"></td>
-                <td id="map[4]" onClick="ClickEvent4()"></td>
-                <td id="map[5]" onClick="ClickEvent5()"></td>
+                <td id="map[3]" onClick="ClickEvent(3)"></td>
+                <td id="map[4]" onClick="ClickEvent(4)"></td>
+                <td id="map[5]" onClick="ClickEvent(5)"></td>
             </tr>
             <tr>
-                <td id="map[6]" onClick="ClickEvent6()"></td>
-                <td id="map[7]" onClick="ClickEvent7()"></td>
-                <td id="map[8]" onClick="ClickEvent8()"></td>
+                <td id="map[6]" onClick="ClickEvent(6)"></td>
+                <td id="map[7]" onClick="ClickEvent(7)"></td>
+                <td id="map[8]" onClick="ClickEvent(8)"></td>
             </tr>
         </table>
     </body>
